hopefully this fixes invisible scroll

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 
 #app {
   max-width: 1280px;
-  min-height: 100vh;
+  min-height: calc(100vh - 2.1rem);
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
